--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-discord.py>=2.6.0
-aiohttp>=3.8.5
-python-dotenv>=1.0.0
-requests>=2.31.0
+aiohttp==3.13.2
+discord.py==2.6.4
+python-dotenv==1.2.1
+redis==7.1.0
+Requests==2.32.5
